fix spacing

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -62,6 +62,8 @@ body > header {
 
 // main menu
 body > main nav {
+    margin-top: -1rem;
+
     ul {
         display: flex;
         flex-wrap: wrap;
@@ -77,11 +79,12 @@ body > main nav {
         li {
             flex: 1 0 10rem;
 
+            margin-top: 1rem;
+
             text-align: center;
 
             a {
                 display: inline-block;
-                text-align: center;
 
                 &,
                 &:active,
@@ -123,7 +126,7 @@ body > aside nav ul {
     list-style: none;
 
     li {
-        flex: 0 0 6rem;
+        flex: 0 0 8rem;
 
         text-align: center;
 
